<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".TalkManageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_home_black_24dp" />

        <ImageButton
            android:id="@+id/group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_group_black_24dp" />

        <ImageButton
            android:id="@+id/talk_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_question_answer_black_24dp" />

        <ImageButton
            android:id="@+id/money_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_attach_money_black_24dp" />

        <ImageButton
            android:id="@+id/notice_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_announcement_black_24dp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:padding="20dp"
        android:rowCount="2">

        <Button
            android:id="@+id/answer_app_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/answerApp" />

        <Button
            android:id="@+id/answer_check_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/answerCheck" />

        <Button
            android:id="@+id/offer_check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layerType="none"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/offerCheck" />

        <Button
            android:id="@+id/ran_check_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/ranCheck" />

    </GridLayout>

</LinearLayout>